--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
+    "tslint": "^6.0.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
