--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "4.6.0",
     "html-webpack-plugin": "^3.2.0",
     "tslint": "^6.0.0",
     "ts-loader": "^6.0.4",
