--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/lodash": "4.14.118",
     "@types/signals": "1.0.1",
+    "@types/uuid": "^8.3.0",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.1",
@@ -27,8 +28,9 @@
   },
   "dependencies": {
     "lodash": "4.17.11",
-    "pixi-sound": "3.0.4",
+    "pixi-sound": "^3.0.5",
     "pixi.js": "5.3.3",
-    "signals": "1.0.0"
+    "signals": "1.0.0",
+    "uuid": "^8.3.0"
   }
 }
